procedure fixes and some db upgrade