@@ -111,7 +111,9 @@ public class Client implements Serializable {
     }
 
     public List<Appointment> getAppointments() {
-        Collections.sort(appointments, (p1, p2) -> Long.valueOf(p2.getDateFrom().getTime()).compareTo(p1.getDateFrom().getTime()));
+//        Collections.sort((e1, e2) -> new Long(e1.get).compareTo(new Long(e2.getCreated())));
+//        appointments.sort();
+//        Collections.sort(appointments, (p1, p2) -> Long.valueOf(p2.getDateFrom().getTime()).compareTo(p1.getDateFrom().getTime()));
         return appointments;
     }
 
